--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <% if (request.original_url.count "/") != 3 %>
-          <%= link_to image_tag("connechub.png", :alt => "logo"), root_path  %>
+          <%= link_to image_tag("small_connechub.png", :alt => "logo"), root_path  %>
         <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
