--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <% if (request.original_url.count "/") != 3 %>
+        <% if request.fullpath != '/' %>
           <%= link_to image_tag("small_connechub.png", :alt => "logo"), root_path  %>
         <% end %>
       </ul>
