REPLACED large_connechub.png with connechub.svg; smaller and more scalable.

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,11 +2,11 @@
 <br>
 <br>
 <div class="container">
-  <div align="center" style="width: 100%;"> <%= image_tag("large_connechub.png", :alt => "logo") %></div>
+  <div class="text-center"> <%= image_tag("connechub.svg", :alt => "ConnecHub", height: 'auto', width: '50%') %></div>
   <br>
   <br>
 
-<div align="center" style="width: 100%;">
+<div class="text-center" style="width: 100%;">
 <%= form_tag search_listings_path, class:"form-inline", method: :get do |f| %>
 <div class="form-group">
     <div class="col-xs-20">
