--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -307,7 +307,7 @@ mark {
                 <li>You must first click on<font color="limegreen"> <b>“Login”</b></font> to sign in </li>
                 <li>Enter your email address and password and click the <font color="limegreen"><b> “Log in” </b></font> button</li>
                 <li> Once you are signed in click on<font color="limegreen"><b> “My Account” </b></font> in the top right corner, a drop-down will appear</li>
-                <li>From the drop-down list choose <font color="limegreen"><b> “Edit My Account” </b> </font> to edit your account.  </li>
+                <li>From the drop-down list choose <font color="limegreen"><b> “Edit Your Account” </b> </font> to edit your account.  </li>
                 <li> Once on the page you will now have the ability to make changes to <font color="limegreen"><b> “My Bio” </b> </font></li>
                 <li>After you have made your changes you will now have to enter in your<font color="limegreen"> <b> “Current Password” </b> </font></li>
                 <li> After entering your <font color="limegreen"><b> “Current Password” </b></font> click on the <font color="limegreen"> <b>“Update”</b> </font>button to save the changes you have just made.</li>
@@ -332,7 +332,7 @@ mark {
                 <li>You must first click on <font color="limegreen"><b>“Login”</b> </font>to sign in</li>
                 <li>Enter your email address and password and click the <font color="limegreen"><b>“Log in”</b></font> button</li>
                 <li>Once you are signed in click on <font color="limegreen"><b>“My Account”</b> </font>in the top right corner, a drop-down will appear</li>
-                <li>From the drop-down list choose <font color="limegreen"><b>“Edit My Account”</b> </font>to edit your account.</li>
+                <li>From the drop-down list choose <font color="limegreen"><b>“Edit Your Account”</b> </font>to edit your account.</li>
                 <li>Once on the page you will now have the ability to change your profile picture by clicking on <font color="limegreen"><b>“Choose File”</b></font> next to <font color="limegreen"><b>“My Profile image”</b></font> </li>
                 <li>After clicking on <font color="limegreen"><b>“Choose File”</b> </font>a page from within your computer will pop up, which will display folders in your computer. </li>
                 <li>Choose the folder that has the profile picture that you would like to use, in some cases it will be in your <font color="limegreen"><b>“Picture”</b></font> folder or in the <font color="limegreen"><b>“Desktop”</b> </font>folder, or whereever you saved the picture.</li>
@@ -364,7 +364,7 @@ mark {
                 <li>You must first click on <font color="limegreen"><b>“Login”</b></font> to sign in </li>
                 <li>Enter your email address and password and click the <font color="limegreen"><b>“Log in”</b> </font>button </li>
                 <li>Once you are signed in click on <font color="limegreen"><b>“My Account”</b></font> in the top right corner, a drop-down will appear </li>
-                <li>From the drop-down list choose <font color="limegreen"><b>“Edit My Account”</b> </font>to edit your account. </li>
+                <li>From the drop-down list choose <font color="limegreen"><b>“Edit Your Account”</b> </font>to edit your account. </li>
                 <li>Once on the page you will now have the ability to make changes to your password in the <font color="limegreen"><b>“Password Change”</b></font> box </li>
                 <li>To change your password enter a new password that is at least 6 characters long. Then enter your new password again in the next box labeled <font color="limegreen"><b>“Password confirmation” </b></font></li>
                 <li>After you have made your changes you will now have to enter in your <font color="limegreen"><b>“Current Password”</b></font> </li>
