--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
 <hr style= "width: 100px">
     <div class="small-heading" style="color: #ffffff"><%= @user.username %></div>
   <div class="hero-description" style="color: #ffffff" ><%= @user.bio %></div><br>
- <div><%= link_to 'Edit My Profile', edit_user_registration_path, class: "btn btn-success btn-sm" %></div>
+ <div><%= link_to 'Edit Your Profile', edit_user_registration_path, class: "btn btn-success btn-sm" %></div>
  <br>
 </div>
 </center>
