--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,10 +29,10 @@
             <% if user_signed_in? %>
               <li><%= link_to 'POST A VIDEO AD', new_listing_path, class: "post" %></li>
               <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Account <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Your Account <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                <li><%= link_to 'My Profile', user_path(current_user.username) %> </li>
-                <li><%= link_to 'Edit My Account', edit_user_registration_path %></li>
+                <li><%= link_to 'Your Profile', user_path(current_user.username) %> </li>
+                <li><%= link_to 'Edit Your Account', edit_user_registration_path %></li>
                 </ul>
               </li>
               <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
