--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -71,7 +71,7 @@
 
                 <div class="input-group">
                     <div class="actions">
-                        <%= f.submit "Update My Post", class: "btn btn-success" %>
+                        <%= f.submit "Update Your Post", class: "btn btn-success" %>
                     </div>
                 </div>
 
