--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -77,7 +77,7 @@
 
                 <div class="input-group">
                     <div class="actions">
-                        <%= f.submit "Post Your Post", class: "btn btn-success" %>
+                        <%= f.submit "Submit Your Post", class: "btn btn-success" %>
                     </div>
                 </div>
 
