--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -119,6 +119,6 @@
       <script>
         $('.dropdown-toggle').dropdown();
       </script>
-      <% console %>
+      <% #console %>
     </body>
 </html>
