--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,13 +18,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+          <% if request.fullpath != '/' %>
+            <%= link_to image_tag("connechub.svg", :alt => ENV["APP_NAME"], height: 'auto', width: '200%'), root_path, style: "float: left" %>
+          <% end %>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <% if request.fullpath != '/' %>
-              <%= link_to image_tag("connechub.svg", :alt => "ConnecHub", height: 'auto', width: '200%'), root_path %>
-            <% end %>
-          </ul>
           <ul class="nav navbar-nav navbar-right">
             <% if user_signed_in? %>
               <li><%= link_to 'POST A VIDEO AD', new_listing_path, class: "post" %></li>
