--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -35,137 +35,65 @@
   <br>
   <br>
 
+  <div align="center" style="width: 100%;"><%= image_tag("directlistsm.jpg", :alt => "directory list") %></div>
 
-<!--
-<div align="center" style="width: 100%;"><%= image_tag("directlistsm.jpg", :alt => "directory list") %></div>
-<br>
+  <br>
 
+  <ul style="width: 75%; margin: 0px auto;" class="ch_card_container">
 
+    <li class="ch_card">
+      <div class="catg_title">
+        <i class = "glyphicon glyphicon-shopping-cart"></i> <strong><%= link_to 'Sale', category_path(@sale) %></strong>
+      </div>
+      <ul class="catg_items">
+        <% @sale.subcategories.each do |subcategory| %>
+          <li><%= link_to subcategory.name, category_subcategory_path(@sale, subcategory) %></li>
+        <% end %>
+      </ul>
+    </li>
 
-<div style="width: 71%; margin: 0px auto;">
+    <li class="ch_card">
+      <div class="catg_title">
+        <i class = "glyphicon glyphicon-globe"></i> <strong><%= link_to 'Community', category_path(@community) %></strong>
+      </div>
+      <ul class="catg_items">
+        <% @community.subcategories.each do |subcategory| %>
+          <li><%= link_to subcategory.name, category_subcategory_path(@community, subcategory) %></li>
+        <% end %>
+      </ul>
+    </li>
 
-<div class="section group">
-<div class="col span_1_of_4">
-<div class="catg_title"><i class = "glyphicon glyphicon-shopping-cart"></i> <strong><%= link_to 'Sale', category_path(@sale) %></strong></div>
-<div class="category_title">
-            <% @sale.subcategories.each do |subcategory| %>
-            <ul>
-              <li><%= link_to subcategory.name, category_subcategory_path(@sale, subcategory) %></li>
-            </ul>
-            <% end %>
-</div>
-<div style="height: 15px; width: 100%;"></div>
-</div>
+    <li class="ch_card">
+      <div class="catg_title">
+        <i class = "glyphicon glyphicon-cog"></i> <strong><%= link_to 'Services', category_path(@services) %></strong>
+      </div>
+      <ul class="catg_items">
+        <% @services.subcategories.each do |subcategory| %>
+          <li><%= link_to subcategory.name, category_subcategory_path(@services, subcategory) %></li>
+        <% end %>
+      </ul>
+    </li>
 
-<div class="col span_1_of_4">
-<%#
-<div class="catg_title"><i class = "glyphicon glyphicon-heart"></i> <strong><%= link_to 'Personals', category_path(@personals) </strong></div>
-<div class="category_title">
-            <%# <% @personals.subcategories.each do |subcategory|
-            <ul>
-              <li><%# <%= link_to subcategory.name, category_subcategory_path(@personals, subcategory) </li>
-            </ul>
-            <%# <% end
-</div>
-<div style="height: 15px; width: 100%;"></div>
-%>
-<div class="catg_title"><i class = "glyphicon glyphicon-globe"></i> <strong><%= link_to 'Community', category_path(@community) %></strong></div>
-<div class="category_title">
+    <li class="ch_card">
+      <div class="catg_title">
+        <i class = "glyphicon glyphicon-briefcase"></i> <strong><%= link_to 'Jobs', category_path(@jobs) %></strong>
+      </div>
+      <ul class="catg_items">
+        <% @jobs.subcategories.each do |subcategory| %>
+          <li><%= link_to subcategory.name, category_subcategory_path(@jobs, subcategory) %></li>
+        <% end %>
+      </ul>
+    </li>
 
-            <% @community.subcategories.each do |subcategory| %>
-            <ul>
-              <li><%= link_to subcategory.name, category_subcategory_path(@community, subcategory) %></li>
-            </ul>
-            <% end %>
-</div>
-<div style="height: 15px; width: 100%;"></div>
-<div class="catg_title"><i class = "glyphicon glyphicon-cog"></i> <strong><%= link_to 'Services', category_path(@services) %></strong></div>
-<div class="category_title">
-            <% @services.subcategories.each do |subcategory| %>
-            <ul>
-              <li><%= link_to subcategory.name, category_subcategory_path(@services, subcategory) %></li>
-            </ul>
-            <% end %>
-</div>
-<div style="height: 15px; width: 100%;"></div>
-<%#
-<div class="catg_title"><i class = "glyphicon glyphicon-user"></i> <strong><%= link_to 'Talent', category_path(@talent) </strong></div>
-<div class="category_title">
-           <% @talent.subcategories.each do |subcategory|
-            <ul>
-              <li><%= link_to subcategory.name, category_subcategory_path(@talent, subcategory) </li>
-            </ul>
-            <% end
-</div>
-<div style="height: 15px; width: 100%;"></div>
-%>
-</div>
+    <li class="ch_card">
+      <div class="catg_title">
+        <i class = "glyphicon glyphicon-home"></i> <strong><%= link_to 'Housing', category_path(@housing) %></strong>
+      </div>
+      <ul class="catg_items">
+        <% @housing.subcategories.each do |subcategory| %>
+          <li><%= link_to subcategory.name, category_subcategory_path(@housing, subcategory) %></li>
+        <% end %>
+      </ul>
+    </li>
 
-<div class="col span_1_of_4">
-<div class="catg_title"><i class = "glyphicon glyphicon-briefcase"></i> <strong><%= link_to 'Jobs', category_path(@jobs) %></strong></div>
-<div class="category_title">
-           <% @jobs.subcategories.each do |subcategory| %>
-            <ul>
-              <li><%= link_to subcategory.name, category_subcategory_path(@jobs, subcategory) %></li>
-            </ul>
-            <% end %>
-</div>
-<div style="height: 15px; width: 100%;"></div>
-</div>
-
-<div class="col span_1_of_4">
-<div class="catg_title"><i class = "glyphicon glyphicon-home"></i> <strong><%= link_to 'Housing', category_path(@housing) %></strong></div>
-<div class="category_title">
-            <% @housing.subcategories.each do |subcategory| %>
-            <ul>
-              <li><%= link_to subcategory.name, category_subcategory_path(@housing, subcategory) %></li>
-            </ul>
-            <% end %>
-</div>
-<div style="height: 15px; width: 100%;"></div>
-<div class="catg_title"><i class = "glyphicon glyphicon-education"></i> <strong><%= link_to 'Campus', category_path(@campus) %></strong></div>
-<div class="category_title">
-            <% @campus.subcategories.each do |subcategory| %>
-            <ul>
-              <li><%= link_to subcategory.name, category_subcategory_path(@campus, subcategory) %></li>
-            </ul>
-            <% end %>
-</div>
-<div style="height: 15px; width: 100%;"></div>
-<div class="catg_title"><i class = "glyphicon glyphicon-search"></i> <strong><%= link_to 'Hard to Find', category_path(@h2f) %></strong></div>
-<div class="category_title">
-           <% @h2f.subcategories.each do |subcategory| %>
-            <ul>
-              <li><%= link_to subcategory.name, category_subcategory_path(@h2f, subcategory) %></li>
-            </ul>
-            <% end %>
-</div>
-<div style="height: 15px; width: 100%;"></div>
-<div class="catg_title"><i class = "glyphicon glyphicon-gift"></i> <strong><%= link_to 'Free', category_path(@free) %></strong></div>
-<div class="category_title">
-           <% @free.subcategories.each do |subcategory| %>
-            <ul>
-              <li><%= link_to subcategory.name, category_subcategory_path(@free, subcategory) %></li>
-            </ul>
-            <% end %>
-</div>
-<div style="height: 15px; width: 100%;"></div>
-<div class="catg_title"><i class = "glyphicon glyphicon-eye-open"></i> <strong><%= link_to 'Unboxing', category_path(@unboxing) %></strong></div>
-<div class="category_title">
-           <% @unboxing.subcategories.each do |subcategory| %>
-            <ul>
-              <li><%= link_to subcategory.name, category_subcategory_path(@unboxing, subcategory) %></li>
-            </ul>
-            <% end %>
-</div>
-</div>
-</div>
-
-</div>
-<br>
-
-
-
-</div>
-<div style="height: 45px; width: 100%;"></div>
--->
+  </ul>
