FIX for masonry tiling bug.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,9 +112,6 @@
             </div>
           </div>
       </nav>
-      <script>
-        $('.dropdown-toggle').dropdown();
-      </script>
-      <% #console %>
+      <%= console %>
     </body>
 </html>
