--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,37 +1,6 @@
-<style>
-    .panel-heading {
-    padding: 5px 15px;
-}
-
-.panel-footer {
-	padding: 1px 15px;
-	color: #A0A0A0;
-}
-
-.profile-img {
-	width: 150px;
-	height: 150px;
-	margin: 0 auto 10px;
-	display: block;
-	-moz-border-radius: 50%;
-	-webkit-border-radius: 50%;
-	border-radius: 50%;
-}
-.sign-h{
-text-align:left;
-color:#317EAC;
-}
-#sign-icon{
-margin-right:5px;
-color:#317EAC;
-}
-
-</style>
-
-
-<div class="container" style="margin-top:40px">
+<div class="container" style="margin-top:40px" id="app_view_devise">
 		<div class="row">
-			<div class="col-sm-6 col-md-4 col-md-offset-4">
+			<div class="col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<h3 class="sign-h"><span id="sign-icon"><i class="glyphicon glyphicon-lock"></i></span>Forgot password?</h3>
