--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,50 +1,16 @@
-
-<style>
-    .panel-heading {
-    padding: 5px 15px;
-}
-
-.panel-footer {
-	padding: 1px 15px;
-	color: #A0A0A0;
-}
-
-.profile-img {
-	width: 96px;
-	height: 96px;
-	margin: 0 auto 10px;
-	display: block;
-	-moz-border-radius: 50%;
-	-webkit-border-radius: 50%;
-	border-radius: 50%;
-}
-.sign-h{
-text-align:left;
-color:#317EAC;
-}
-#sign-icon{
-margin-right:5px;
-color:#317EAC;
-}    
-</style>
-
-
-<div class="container" style="margin-top:40px">
+<div class="container" style="margin-top:40px" id="app_view_devise">
 		<div class="row">
-			<div class="col-sm-6 col-md-4 col-md-offset-4">
+			<div class="col-sm-6 col-md-4 col-sm-offset-3 col-md-offset-4">
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<h3 class="sign-h"><span id="sign-icon"><i class="fa fa-sign-in"></i></span>Sign Up!</h3>
 					</div>
 					<div class="panel-body">
-					  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-					  <%= devise_error_messages! %>
+					  	<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+					  	<%= devise_error_messages! %>
 							<fieldset>
-
 								<div class="row">
 									<div class="col-sm-12 col-md-10  col-md-offset-1 ">
-										<small style="color:red">* Note! You must complete all fields!</small>
-											<br>
 										<div class="form-group">
 											<div class="input-group">
 												<span class="input-group-addon">
