--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_for([@listing, @listing.comments.build]) do |f| %>
   <%= f.text_area :body, class: "form-control"  %><br>
-  <%= f.submit class: "btn btn-primary" %><br>
+  <%= f.submit class: "btn btn-primary", id: "submit-btn" %><br>
 <% end %>
