--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -30,7 +30,7 @@
                 <br>
 
                 <div class="input-group hidden text-warning" id="payment_form">
-                    <div>This category will require payment on the next step.</div>
+                    <div>* This category will require payment on the next page to complete creating a listing.</div>
                     <br>
                 </div>
 
