Cont moved file upload logic inside of JQ doc ready.

--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -83,7 +83,7 @@
                     </div>
                     <br>
 
-                    <div class="input-group">
+                    <div class="input-group field">
                         <div class="input-group-addon">Video</div>
                         <%= f.file_field :media, class: "form-control" %><br>
                         <pre id="listing_media_info"></pre>
