Last know good. This uploaded but on the wrong event.

--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -11,7 +11,7 @@
 
                 <%= simple_form_for(@listing, html: {
                     multipart: true,
-                    class: 'directUpload form-horizontal ',
+                    class: 'form-horizontal ',
                     data: {
                         'form-data' => (@s3_direct_post.fields),
                         'url' => @s3_direct_post.url,
